Vereenvoudig server en schema voor POC
